--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "scripts": {
     "dev:mooc:backend": "NODE_ENV=dev ts-node-dev --ignore-watch node_modules  ./src/apps/mooc/backend/start.ts",
-    "lint": "tslint src/**/*.ts{,x}",
+    "lint": "eslint --ignore-path .gitignore .",
+    "lint:fix": "npm run lint -- --fix",
     "test": "npm run test:unit && npm run test:features",
     "test:unit": "NODE_ENV=test jest",
     "start:mooc:backend": "NODE_ENV=production node dist/src/apps/mooc/backend/start",
@@ -48,20 +49,22 @@
   "devDependencies": {
     "@types/bson": "^4.0.5",
     "@types/compression": "^1.7.2",
-    "@types/errorhandler": "1.5.0",
-    "@types/express": "^4.17.13",
-    "@types/glob": "^7.1.4",
-    "@types/helmet": "0.0.48",
-    "@types/node": "^16.10.2",
     "@types/connect-flash": "0.0.37",
     "@types/cookie-parser": "^1.4.2",
     "@types/cookie-session": "^2.0.43",
     "@types/cucumber": "^6.0.1",
+    "@types/errorhandler": "1.5.0",
+    "@types/express": "^4.17.13",
     "@types/faker": "^5.5.8",
+    "@types/glob": "^7.1.4",
+    "@types/helmet": "0.0.48",
     "@types/jest": "^27.0.2",
+    "@types/node": "^16.10.2",
     "@types/nunjucks": "^3.2.0",
     "@types/supertest": "^2.0.11",
     "cucumber": "^6.0.5",
+    "eslint": "^8.33.0",
+    "eslint-config-codely": "^2.1.3",
     "faker": "^5.5.3",
     "husky": "^7.0.2",
     "jest": "^27.2.4",
@@ -69,10 +72,7 @@
     "prettier": "^2.4.1",
     "supertest": "^6.1.6",
     "ts-jest": "^27.0.5",
-    "ts-node-dev": "^1.1.8",
-    "tslint": "^6.1.3",
-    "tslint-config-prettier": "~1.18.0",
-    "tslint-eslint-rules": "^5.4.0"
+    "ts-node-dev": "^1.1.8"
   },
   "husky": {
     "hooks": {
@@ -81,8 +81,7 @@
   },
   "lint-staged": {
     "{src,tests}/**/*.ts": [
-      "prettier --write",
-      "tslint --fix",
+      "npm run lint:fix",
       "git add"
     ]
   }
