style: some manual fixes

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -18,10 +18,12 @@ jobs:
       - name: npm install
         run: |
           npm install
+      - name: npm run lint
+        run: |
+          npm run lint
       - name: npm run build
         run: |
           npm run build --if-present
-          npm run lint
       - name: npm test
         run: |
           npm test
